# plastic-transcode

./: API.md  plastic-transcode-api.cabal  plastic-transcode.cabal  stack.yaml
app/: Broker.hs  Main.hs  Worker.hs
src/: Api.hs  Media.hs  Models.hs  Types.hs  Utils.hs
src/Broker/: Api.hs  Media.hs  Models.hs  Types.hs
src/Worker/: Client.hs  EncodingProfile.hs  Transcode.hs
