name:                plastic-transcode
version:             0.1.0.0
synopsis:            API service for Plastic Transcode
description:         Please see README.md
homepage:            https://github.com/ford-prefect/plastic-transcode#readme
license:             Apache-2.0
license-file:        LICENSE
author:              Arun Raghavan
maintainer:          arun@arunraghavan.net
copyright:           2017 Arun Raghavan
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Broker.Api
                     , Broker.Media
                     , Broker.Models
  other-modules:       Broker.Types
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , containers
                     , esqueleto
                     , persistent
                     , persistent-template
                     , servant-server
                     , text
                     , unordered-containers
  default-language:    Haskell2010

executable plastic-transcode-broker-exe
  hs-source-dirs:      app
  main-is:             Broker.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , monad-logger
                     , plastic-transcode
                     , persistent-postgresql
                     , servant-server
                     , warp
  default-language:    Haskell2010

test-suite plastic-transcode-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , plastic-transcode
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ford-prefect/plastic-transcode
